# fedora-image-directory

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: generate.yml
app/: __init__.py  process_aws.py
data/: images.json.zst  processed.json  product-versions.json  releases.json
templates/: aws_detail.html  aws_launch.html  aws_list.html  aws_regions.html  base.html  home.html  index.html  index_old.html
