[tool.poetry]
name = "fedora-image-directory"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
flask = "^2.2.3"
pandas = "^1.5.3"
frozen-flask = "^0.18"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.2.1"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process_images = 'app.process_aws:main'